# sat

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
src/: cnf.cpp  dpll.cpp  sat.cpp  sat.cppm
src/runtime/: dpll.cpp
test/: tests.cpp
